--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -366,5 +366,9 @@
   "Planmemo": "フリーメモ",
   "MetaTitle": "",
   "MetaDescription": "",
-  "SearchGoogle": "Google Search"
+  "SearchGoogle": "Google Search",
+  "KanakuraLunch": "鎌倉 絶品ランチが食べたい！",
+  "SapporoJyosiTabi": "札幌 2泊3日の女子旅プラン",
+  "AddNewPlan": "新規に作る",
+  "AddNewfromRecommended": "みんなのおすすめから作る"
 }
