--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "次のお休み、どこいく？",
+  "FindEveryoneRecommendations": "次のお休み、どこに行く？",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "編集",
@@ -155,20 +155,20 @@
   "San": "さん",
   "Sanno": "さんの",
   "PleaseLogin": "ログインしてください",
-  "MakeATripPlan": "旅プランを作成",
+  "MakeATripPlan": "myプランを作る",
   "SearchBySpot": "スポットから探す",
   "SearchByModelPlan": "プランから探す",
-  "SearchByFavorite": "お気に入りから探す",
+  "SearchByFavorite": "お気に入りから作る",
   "SearchFromEveryonesPostingPlan": "みんなの投稿プランから探す",
   "ViewFeaturedArticles": "特集",
-  "RecommendedTripForGirls": "京都女子旅♡",
-  "LetsGoToKyotoNow": "みどころ満載！京都観光",
+  "RecommendedTripForGirls": "京都 女子旅はこれで完璧！♡",
+  "LetsGoToKyotoNow": "京都 おすすめモデルコース",
   "ExcitingTripForKids": "家族で楽しむワクワク旅行",
   "SeeOther": "その他",
   "PlanSubmission": "プラン投稿",
   "PlanSubmissionSub": "myプランを投稿する",
   "EditPlanProgress": "プランを編集する",
-  "ViewSavedPlans": "保存したmyプランを見る",
+  "ViewSavedPlans": "myプランを見る",
   "ViewMyPage": "マイページ",
   "ViewFavorite": "お気に入りを見る",
   "EditProfile": "プロフィールを編集する",
@@ -343,8 +343,8 @@
   "EndEx": "自宅や解散場所など到着地をセットすると、最後のスポットからの経路も表示されます。",
   "LinktoDetail": "詳細を見る",
   "About": "アバウト",
-  "Guide": "ガイド",
-  "Policy": "ご利用規約",
+  "Guide": "初めての方へ",
+  "Policy": "運営会社・利用規約",
   "MapDisp": "マップ表示",
   "AutoTips": "出発地から到着地までの最短ルートを計算します。",
   "Thanks": "いいね",
@@ -354,7 +354,7 @@
   "ErrorMsgEkitan": "経路　公共手段がありませんでした。",
   "View": "閲覧数",
   "InPlanBox": "「myプラン」エリアで編集可能になりました。",
-  "Contact": "お問い合わせ",
+  "Contact": "お問合せ",
   "PlanboxChange": "myプランに入りました。",
   "PlanSpotList": "みんなのおすすめプラン",
   "AllListHeader": "みんなのおすすめ",
@@ -366,5 +366,9 @@
   "Planmemo": "フリーメモ",
   "MetaTitle": "",
   "MetaDescription": "",
-  "SearchGoogle": "Googleで検索"
+  "SearchGoogle": "Googleで検索",
+  "KanakuraLunch": "鎌倉 絶品ランチが食べたい！",
+  "SapporoJyosiTabi": "札幌 2泊3日の女子旅プラン",
+  "AddNewPlan":"新規に作る",
+  "AddNewfromRecommended":"みんなのおすすめから作る"
 }
