--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -154,7 +154,7 @@
   "Welcome": "ようこそ",
   "San": "さん",
   "Sanno": "さんの",
-  "PleaseLogin": "ログインしてください",
+  "PleaseLogin": "ログイン 又は アカウント登録",
   "MakeATripPlan": "myプランを作る",
   "SearchBySpot": "スポットから探す",
   "SearchByModelPlan": "プランから探す",
