--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -204,7 +204,7 @@
   "ShareYourPlanWithOtherUsers": "自分のプランを他のユーザーにも共有しよう",
   "PlanSave": "プランを保存しました。",
   "NoSpotName": "保存にはスポット名が必要です。スポット名を入力してください。",
-  "NoSpot": "次のお休み、どこいく？",
+  "NoSpot": "次のお休み、どこに行く？",
   "NoSpot1": "みんなのおすすめPlanやSpotを追加して",
   "NoSpot2": "Myプランを作ってみよう!",
   "RegisterSpot": "スポットを登録",
