--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -369,6 +369,6 @@
   "SearchGoogle": "Googleで検索",
   "KanakuraLunch": "鎌倉 絶品ランチが食べたい！",
   "SapporoJyosiTabi": "札幌 2泊3日の女子旅プラン",
-  "AddNewPlan":"新規に作る",
-  "AddNewfromRecommended":"みんなのおすすめから作る"
+  "AddNewPlan":"キーワードで検索する",
+  "AddNewfromRecommended":"みんなのおすすめを見る"
 }
