--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -293,7 +293,7 @@
   "LogoutConfirmTitle": "ログアウトしますか？(未保存のプランがあります)",
   "LogoutConfirmText": "「はい」を選択した場合、未保存の編集内容は削除されます。",
   "NearestSt": "最寄駅",
-  "SearchGuide": "キーワードで検索",
+  "SearchGuide": "キーワード、地名、住所で検索",
   "CreateNew": "新規作成する",
   "LoginConfirmTitle": "保存にはログインが必要です。",
   "LoginConfirmText": "ログイン画面 又は ユーザー登録画面に移動しますか？",
@@ -317,9 +317,9 @@
   "Instead": "代わりに",
   "GoogleSearch": "Google検索",
   "SearchSpot": "からヒットしたものを選択してください。",
-  "GoogleSearchAny": "みんなのおすすめに、まだないスポットです。",
-  "ReplaceKeyword": "Googleで検索して",
-  "includedPlan": "myプランに追加できます。",
+  "GoogleSearchAny": "みんなのおすすめに、まだ無いスポットです。",
+  "ReplaceKeyword": "代わりにGoogleから検索しています",
+  "includedPlan": "これらもmyプランに追加できますよ！",
   "UserPlan": "ユーザープラン",
   "Man": "回",
   "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。",
