--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -253,6 +253,7 @@
   "FavoriteRemoveConfirm": "Are you sure to delete your favorites?",
   "FavoriteRemoved": "Deleted your favorites.",
   "PlanName": "Enter a title for this Plan.",
+  "PlanNameEx": "次のお休みを計画しよう！ -利用無料-",
   "MyplanSelectPhoto": "Select a photo",
   "ReportReview": "Report inappropriate content",
   "ReportReviewConfirmTitle": "Report as inappropriate?",
