--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -226,7 +226,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "myプラン",
+  "ArragePlan": "my休日プラン",
   "SetDeparturePoint": "出発地のセット",
   "SetDestination": "到着地のセット",
   "PointOfDeparture": "出発地",
@@ -253,6 +253,7 @@
   "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
   "PlanName": "プラン名を入れましょう",
+  "PlanNameEx":"次のお休みを計画しよう！ -利用無料-",
   "MyplanSelectPhoto": "写真選択",
   "ReportReview": "コメントを違反報告",
   "ReportReviewConfirmTitle": "不適切なコメントを報告しますか？",
