--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -252,8 +252,7 @@
   "SpotExplanationEx": "このスポットでやりたいことなど忘れずに書いておこう",
   "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
-  "PlanName": "プラン名を入れましょう",
-  "PlanNameEx":"次のお休みを計画しよう！ -利用無料-",
+  "PlanName": "次のお休みを計画しよう！ -利用無料-",
   "MyplanSelectPhoto": "写真選択",
   "ReportReview": "コメントを違反報告",
   "ReportReviewConfirmTitle": "不適切なコメントを報告しますか？",
