--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -343,7 +343,7 @@
   "EndEx": "自宅や解散場所など到着地をセットすると、最後のスポットからの経路も表示されます。",
   "LinktoDetail": "詳細を見る",
   "About": "アバウト",
-  "Guide": "初めての方へ",
+  "Guide": "はじめての方へ",
   "Policy": "運営会社・利用規約",
   "MapDisp": "マップ表示",
   "AutoTips": "出発地から到着地までの最短ルートを計算します。",
