--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,8 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "次のお休み、どこに行く？",
+  "FindEveryoneRecommendations": "次のお休みを計画しよう",
+  "FindEveryoneRecommendations2":"～無料でプランが作れるよ～",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "編集",
@@ -226,7 +227,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "my休日プラン",
+  "ArragePlan": "myプラン",
   "SetDeparturePoint": "出発地のセット",
   "SetDestination": "到着地のセット",
   "PointOfDeparture": "出発地",
@@ -357,7 +358,7 @@
   "Contact": "お問合せ",
   "PlanboxChange": "myプランに入りました。",
   "PlanSpotList": "みんなのおすすめプラン",
-  "AllListHeader": "みんなのおすすめ",
+  "AllListHeader": "みんなはここをおすすめしてるよ",
   "PlanListHeader": "みんなのおすすめプラン",
   "SpotListHeader": "みんなのおすすめスポット",
   "Loading": "検索しています。少々お待ちください...",
