--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,7 +43,8 @@
   "TimeRequired": "req. time",
   "RemojuRecommended": "Remoju plans",
   "UserSubmissionPlan": "User plans",
-  "FindEveryoneRecommendations": "Whore to?",
+  "FindEveryoneRecommendations": "Plan your next vacation",
+  "FindEveryoneRecommendations2": "～for free～",
   "BackEveryoneRecommendations": "Back to list",
   "BackEveryoneRecommendationsMyPage": "List",
   "EditPlan": "Edit",
