--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -279,7 +279,7 @@
   "ReportPlanUserConfirmTitle": "不適切なプランを報告しますか？",
   "ReportPlanUserConfirmText": "ご報告いただいたプランについて、担当者が数営業日以内に確認します。",
   "Selectimagespot": "スポットの画像を変更できます。",
-  "Roundspot": "周遊スポット",
+  "Roundspot": "周る順番",
   "Max6spots": "最大６ヶ所",
   "Option": "※オプション",
   "AddToPlanOnly": "ここだけプランに追加",
