--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,8 +43,8 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "次のお休みを計画しよう",
-  "FindEveryoneRecommendations2":"～無料でプランが作れるよ～",
+  "FindEveryoneRecommendations": "おでかけ検索はリモージュ",
+  "FindEveryoneRecommendations2":"～たのしい休日プランが作れる(無料)～",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "編集",
