--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "おでかけ検索はリモージュ",
+  "FindEveryoneRecommendations": "おでかけ検索は、リモージュ",
   "FindEveryoneRecommendations2":"～たのしい休日プランが作れる(無料)～",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
