--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -358,7 +358,7 @@
   "Contact": "お問合せ",
   "PlanboxChange": "myプランに入りました。",
   "PlanSpotList": "みんなのおすすめプラン",
-  "AllListHeader": "みんなはここをおすすめしてるよ",
+  "AllListHeader": "みんなのおすすめはこちら",
   "PlanListHeader": "みんなのおすすめプラン",
   "SpotListHeader": "みんなのおすすめスポット",
   "Loading": "検索しています。少々お待ちください...",
