--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -371,5 +371,6 @@
   "KanakuraLunch": "鎌倉 絶品ランチが食べたい！",
   "SapporoJyosiTabi": "札幌 2泊3日の女子旅プラン",
   "AddNewPlan": "新規に作る",
-  "AddNewfromRecommended": "みんなのおすすめから作る"
+  "AddNewfromRecommended": "みんなのおすすめから作る",
+  "SearchTo":"検索先"
 }
