--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -230,8 +230,8 @@
   "ArragePlan": "Plan Box",
   "SetDeparturePoint": "Set point of departure",
   "SetDestination": "Set destination",
-  "PointOfDeparture": "Point of departure",
-  "ArrivalPlace": "Arrival place",
+  "PointOfDeparture": "Dept.",
+  "ArrivalPlace": "Arrive.",
   "Remove": "Remove",
   "SpotStart": "Start",
   "SpotEnd": "End",
@@ -363,14 +363,14 @@
   "SpotListHeader": "Recommended Spotlist",
   "Loading": "please wait a little bit...",
   "SaveMemo": "このダイアログを閉じてから保存します",
-  "Planpoint": "このプランのポイント",
-  "Planmemo": "フリーメモ",
+  "Planpoint": "this plan of point",
+  "Planmemo": "Plan memo",
   "MetaTitle": "",
   "MetaDescription": "",
   "SearchGoogle": "Google Search",
-  "KanakuraLunch": "鎌倉 絶品ランチが食べたい！",
-  "SapporoJyosiTabi": "札幌 2泊3日の女子旅プラン",
-  "AddNewPlan": "新規に作る",
-  "AddNewfromRecommended": "みんなのおすすめから作る",
-  "SearchTo":"検索先"
+  "KanakuraLunch": "Eat a delicious lunch in Kamakura!",
+  "SapporoJyosiTabi": "Sapporo 2 nights 3 days girls trip plan",
+  "AddNewPlan": "Create your own travel plan",
+  "AddNewfromRecommended": "Create from the recommended plan",
+  "SearchTo":"SearchTo"
 }
