--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -228,8 +228,8 @@
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
   "ArragePlan": "myプラン",
-  "SetDeparturePoint": "出発地のセット",
-  "SetDestination": "到着地のセット",
+  "SetDeparturePoint": "駅・バス停・住所・施設",
+  "SetDestination": "駅・バス停・住所・施設",
   "PointOfDeparture": "出発地",
   "ArrivalPlace": "到着地",
   "Remove": "削除",
