プランボックスラベルの修正

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -76,7 +76,7 @@
   "EnterPlanName": "保存するプラン名を入力",
   "SpotDeleted": "スポットを削除しました。",
   "StartTime": "出発時間",
-  "Memo": "メモ書きをしよう",
+  "Memo": "メモや感想を入力",
   "ShareUrl": "共有URL",
   "SavePlan": "プランを保存",
   "OK": "はい",
@@ -308,7 +308,7 @@
   "AgeAnnounced": "年代は公表されます。",
   "SetBirthday": "設定は編集の生年月日で行います。",
   "ImgSelected": "選択",
-  "TravelBookmark": "プラン名",
+  "TravelBookmark": "プランの紹介や説明文を入力",
   "PasteImg": "プランの表紙写真を選ぼう",
   "PasteImgSpot": "スポットの写真を追加します",
   "NotFound": "お探しのページは見つかりませんでした。",
@@ -363,7 +363,7 @@
   "SpotListHeader": "みんなのおすすめスポット",
   "Loading": "検索しています。少々お待ちください...",
   "SaveMemo": "このダイアログを閉じてから保存します",
-  "Planpoint": "このプランのポイント",
+  "Planpoint": "プランのポイント",
   "Planmemo": "フリーメモ",
   "MetaTitle": "",
   "MetaDescription": "",
