meta差し替え＆トップ、メニュー変更

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -370,6 +370,8 @@
   "SearchGoogle": "Google Search",
   "KanakuraLunch": "Eat a delicious lunch in Kamakura!",
   "SapporoJyosiTabi": "Sapporo 2 nights 3 days girls trip plan",
+  "KamakuraJyosiTabi":"Kamakura: Spots of enjoy 120% of girls' trip",
+  "AreaSpecial":"Regional special feature page",
   "AddNewPlan": "Create your own travel plan",
   "AddNewfromRecommended": "Create from the recommended plan",
   "SearchTo":"SearchTo"
